##
## CVS
##
###############################################################################
###############################################################################

=head1 1.9 [????-??-??]

=head2 Fixes

=over 4

=item *

Removed POSIX::tempnam() deprecation warning.

=item *

Fixed over-escaping problem. "\\\\" now evaluates as "\\" instead of "\".

=back


=head1 1.8.1 [2007-07-20]

=head2 Fixes

=over 4

=item *

Applied patch from rafalka: http://sourceforge.net/support/tracker.php?aid=1635389
to fix path behavior on Windows.

=back


=head1 1.8 [2003-01-18]

=head2 Fixes

=over 4

=item *

Removed module-specific VERSION variables (some were based on their CVS
revision numbers.

=back


=head1 1.7 [2003-01-16]

=head2 Fixes

=over 4

=item *

Incremented version so $Psh::VERSION > 1.67, which was the version for that
module in the 0.009 release (because at that time, version was set according
to the CVS revision, rather than to match the release). This should (finally)
make CPAN happy.

=back


=head1 1.1 [2003-01-16]

=head2 Fixes

=over 4

=item *

Put VERSION back in Psh.pm instead of in the main psh script.

=item *

Some copyright updates.

=back


=head1 1.0 [2003-01-02]

=head2 New Features

=over 4

=item *

The new B<if> builtin allows mixing evaluation strategies. Example:

   if ( -r 'README' ) {
       if ( grep -q "Perl Shell" README ) {
           print "OK\n";
       }
   }

=item *

New B<forfile> builtin:

   forfile *.txt less $_

is equivalent to

   for i in *; do less $i; done

in (ba)sh

=item *

New redirection and piping syntax - incompatible to the old sh-like
syntax. The new syntax is allowing many nice things like redirecting
to opened Perl filehandles ( command >[=FILEHANDLE])

=item *

Perl shell now integrates with Perl backticks, you you can finally do
things like:

   $foo=`help strategy`
   chomp $foo
   if ( $foo =~ /.../ ) ...

=item * 

New B<-F> command line switch to disable processing of any pshrc files

=item *
